[fix] fixing POST/PUT/DELETE for FireStations